--- a/ch01.airBandB/index.css
+++ b/ch01.airBandB/index.css
@@ -47,109 +47,242 @@ table {
 	border-spacing: 0;
 }
 
-/*  */
-
-
-header{
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    padding:0px 80px;
-    height: 80px;
-    box-shadow: rgb(0 0 0 / 8%) 0 1px 0;
-    position: relative;
-}
-button{
-    background-color: transparent;
-    border:none;
+button {
+  background-color: transparent;
+  border: none;
 }
 
-#logo{
-    height: 64px;
-    cursor: pointer;
+header {
+  display: flex;
+  padding: 0 80px;
+  height: 80px;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: rgb(0 0 0 / 8%) 0 1px 0;
 }
 
-#little-search{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    border:1px solid #ddd;
-    border-radius: 40px;
-    min-width: 330px;
-    height: 48px;
-    box-sizing: border-box;
-    box-shadow: 0 1px 2px rgb(0 0 0 / 8%), 0 4px 12px rgb(0 0 0 / 5%);
-    position: absolute;
-    left: 50%;
-    top:50%;
-    transform: translate(-50%, -50%);
-}
-#little-search:hover{
-    box-shadow: 0 2px 4px rgba(0,0,0,0.18);
-}
-#little-search *{
-    cursor: pointer;
-}
-.little-search_button{
-    padding: 0px 16px;
-    white-space: nowrap;
-    font-size: 14px;
-    font-weight: 600;
-    color: rgb(34, 34, 34);
+#logo {
+  height: 64px;
+  cursor: pointer;
 }
 
-.little-search_button:nth-of-type(3){
-    color:#717171;
+#little-search {
+  display: flex;
+  padding: 0 8px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #DDDDDD;
+  border-radius: 40px;
+  height: 48px;
+  box-sizing: border-box;
+  min-width: 330px;
+  box-shadow: 0 1px 2px rgb(0 0 0 / 8%), 0 4px 12px rgb(0 0 0 / 5%);
+  cursor: pointer;
 }
 
-.divider{
-    flex-basis: 1px;
-    background-color: #ddd;
-    height: 24px;
+#little-search:hover {
+  box-shadow: 0 2px 4px rgba(0,0,0,0.18);
 }
 
-#magnifying-glass-wrapper{
-    background-color: #ff385c;
-    border-radius: 50%;
-    flex-basis: 32px;
-    height: 32px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-    
-}
-#magnifying-glass-icon{
-    width: 14px;
+#little-search * {
+  cursor: pointer;
 }
 
-#header-right-section{
-    display:flex;
+.little-search_button {
+  display: block;
+  flex-shrink: 0;
+  padding: 0 16px;
+  white-space: nowrap;
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(34, 34, 34);
 }
 
-#do-airbnb{
-    font-size: 14px;
-    color: #222;
-    font-weight: 600;
-    cursor: pointer;
-    padding: 12px;
+.little-search_button:nth-of-type(3) {
+  color: #717171;
 }
 
-#do-airbnb:hover{
-    background-color: #f7f7f7;
-    border-radius: 22px;
-    
+.divider {
+  display: block;
+  flex-basis: 1px;
+  flex-shrink: 0;
+  background-color: #DDDDDD;
+  height: 24px;
 }
 
-#profile-section{
-    display:flex;
-    align-items: center;
-    border:1px solid #ddd; 
-    border-radius: 21px;
-    padding: 5px 5px 5px 12px;
-    gap: 12px;
-}
-#profile-section:hover{
-    box-shadow: 0 2px 4px rgba(0,0,0,0.18);
+#magnifying-glass-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FF385C;
+  flex-basis: 32px;
+  flex-shrink: 0;
+  height: 32px;
+  border-radius: 50%;
 }
 
+#magnifying-glass-icon {
+  width: 12px;
+}
+
+#header-right-section {
+  display: flex;
+  gap: 8px;
+}
+
+#do-airbnb {
+  padding: 12px;
+  font-size: 14px;
+  color: #222222;
+  font-weight: 600;
+  cursor: pointer;
+  border-radius: 22px;
+}
+
+#do-airbnb:hover {
+  background-color: #f7f7f7;
+}
+
+#profile-section {
+  display: flex;
+  padding: 5px 5px 5px 12px;
+  align-items: center;
+  border: 1px solid #DDDDDD;
+  border-radius: 21px;
+  gap: 12px;
+  cursor: pointer;
+}
+
+#profile-section:hover {
+  box-shadow: 0 2px 4px rgba(0,0,0,0.18);
+}
+#category-bar {
+  display: flex;
+  padding: 20px 40px 0;
+  gap: 32px;
+  overflow: auto;
+}
+
+#category-bar::-webkit-scrollbar {
+  display: none;
+}
+
+.active-img {
+  display: none;
+}
+
+.category-button {
+  color: #717171;
+  height: 66px;
+  padding: 14px;
+  font-size: 12px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.category-button img{
+  width: 28px;
+}
+
+.category-button:hover {
+  color: #000000;
+  border-bottom: 2px solid #DDDDDD;
+}
+
+.category-button:hover .active-img{
+  display: inline-block;
+}
+
+.category-button:hover .inactive-img{
+  display: none;
+}
+
+#active-category-button {
+  color: #000000;
+  border-bottom: 2px solid #000000;
+}
+
+#active-category-button .active-img{
+  display: inline-block;
+}
+
+#active-category-button .inactive-img{
+  display: none;
+}
+
+.place-image-wrapper {
+  position: relative;
+  width: 308px;
+  height: 293px;
+  border-radius: 23px;
+  overflow: hidden;
+}
+
+.place-image-wrapper img {
+  width: 500px;
+  height: 500px;
+}
+
+.place-image-wrapper .heart-icon {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+}
+
+.description-section {
+  margin-top: 13px;
+  display: flex;
+  flex-direction: column;
+  font-size: 15px;
+  color: rgb(34, 34, 34);  
+  gap: 3px;
+}
+
+.description-section_title {
+  font-weight: 600;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  padding: 24px 80px;
+}
+
+#place-items-wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, 308px);
+  justify-items: center;
+  align-items: center;
+  box-sizing: border-box;
+  gap: 40px 24px;
+}
+
+.heart-icon:active {
+  transform: scale(0.5);
+  transition: transform 0.25s ease;
+}
+
+#floating-map-button {
+  position: fixed;
+  display: flex;
+  padding: 14px 19px;
+  align-items: center;
+  left: 50%;
+  bottom: 125px;
+  background-color: #222222;
+  border-radius: 24px;
+  transform: translateX(-50%);
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 600;
+  gap: 8px;
+  cursor: pointer;
+}
+
+#floating-map-button:hover {
+  box-shadow: 0 0 0 1px transparent, 0 0 0 4px transparent,        0 6px 16px rgba(0,0,0,0.12) !important;
+  transform: translateX(-50%) scale(1.04);
+}
